k8s/shared/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: paystream
  labels:
    name: paystream
    app.kubernetes.io/part-of: paystream
